--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~43.0.0",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "nodemon": "^2.0.15",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
